--- a/src/app/components/cotacao/cotacao.component.html
+++ b/src/app/components/cotacao/cotacao.component.html
@@ -388,7 +388,29 @@
             </mat-expansion-panel-header>
 
             <div>
-              hospitais...
+              <mat-table #sortHospital='matSort' [dataSource]="dataSourceHospitais" matSort class="mat-elevation-z8">
+
+                <ng-container matColumnDef="nomeHospital">
+                  <mat-header-cell *matHeaderCellDef mat-sort-header>Hospital</mat-header-cell>
+                  <mat-cell *matCellDef="let hospital"> {{hospital.nome}} </mat-cell>
+                </ng-container>
+
+                <ng-container [matColumnDef]="produto.nome" *ngFor="let produto of todosProdutosCotacao" >
+                  <mat-header-cell *matHeaderCellDef mat-sort-header>
+                    <div style="flex-direction: column">
+                      <div>{{produto.operadora.nome}}</div>
+                      <div>{{produto.nome}}</div>
+                    </div>
+                  </mat-header-cell>
+                  <mat-cell *matCellDef="let hospital">
+                    <mat-checkbox [disabled]="true" [ngModel]="verificaSeHospitalSelecionado(produto, hospital)"></mat-checkbox>
+                  </mat-cell>
+                </ng-container>
+
+                <mat-header-row *matHeaderRowDef="displayedColumnsHospitais"></mat-header-row>
+                <mat-row *matRowDef="let row; columns: displayedColumnsHospitais;"></mat-row>
+              </mat-table>
+              <mat-paginator #paginatorHospital [pageSizeOptions]="[10, 50, 100]" [length]="dataSourceHospitais.data.length" showFirstLastButtons></mat-paginator>
             </div>
 
           </mat-expansion-panel>
@@ -406,7 +428,51 @@
             </mat-expansion-panel-header>
 
             <div>
-              laboratiorios...
+              <mat-table #sortLaboratorio='matSort' [dataSource]="dataSourceLaboratorios" matSort class="mat-elevation-z8">
+                <ng-container matColumnDef="id">
+                  <mat-header-cell *matHeaderCellDef mat-sort-header>Id</mat-header-cell>
+                  <mat-cell *matCellDef="let cotacao" (click)="selecionaCotacao(cotacao)" class="mouse-pointer"> {{cotacao.id}} </mat-cell>
+                </ng-container>
+
+                <ng-container matColumnDef="estado">
+                  <mat-header-cell *matHeaderCellDef mat-sort-header> Estado </mat-header-cell>
+                  <mat-cell *matCellDef="let cotacao" (click)="selecionaCotacao(cotacao)" class="mouse-pointer"> {{cotacao.tabela.estado.sigla}} </mat-cell>
+                </ng-container>
+
+                <ng-container matColumnDef="nomeTabela">
+                  <mat-header-cell *matHeaderCellDef mat-sort-header> Tabela </mat-header-cell>
+                  <mat-cell *matCellDef="let cotacao" (click)="selecionaCotacao(cotacao)" class="mouse-pointer"> {{cotacao.tabela.nome}} </mat-cell>
+                </ng-container>
+
+                <ng-container matColumnDef="nomeProduto">
+                  <mat-header-cell *matHeaderCellDef mat-sort-header> Produto </mat-header-cell>
+                  <mat-cell *matCellDef="let cotacao" (click)="selecionaCotacao(cotacao)" class="mouse-pointer"> {{cotacao.produto.nome}} </mat-cell>
+                </ng-container>
+
+                <ng-container matColumnDef="acomodacao">
+                  <mat-header-cell *matHeaderCellDef mat-sort-header> Acomodacao </mat-header-cell>
+                  <mat-cell *matCellDef="let cotacao" (click)="selecionaCotacao(cotacao)" class="mouse-pointer"> {{cotacao.acomodacao}} </mat-cell>
+                </ng-container>
+
+                <ng-container matColumnDef="coparticipacao">
+                  <mat-header-cell *matHeaderCellDef mat-sort-header> Coparticipacao </mat-header-cell>
+                  <mat-cell *matCellDef="let cotacao" (click)="selecionaCotacao(cotacao)" class="mouse-pointer"> {{cotacao.coparticipacao ? 'Com' : 'Sem'}} </mat-cell>
+                </ng-container>
+
+                <ng-container matColumnDef="valor">
+                  <mat-header-cell *matHeaderCellDef mat-sort-header> R$ </mat-header-cell>
+                  <mat-cell *matCellDef="let cotacao" (click)="selecionaCotacao(cotacao)" class="mouse-pointer"> {{ calculaValorCotacao(cotacao) | currency: 'BRL' }} </mat-cell>
+                </ng-container>
+
+                <ng-container matColumnDef="entidades">
+                  <mat-header-cell *matHeaderCellDef mat-sort-header> Entidades </mat-header-cell>
+                  <mat-cell *matCellDef="let cotacao" (click)="selecionaCotacao(cotacao)" class="mouse-pointer"> {{ displayEntidades(cotacao) }} </mat-cell>
+                </ng-container>
+
+                <mat-header-row *matHeaderRowDef="displayedColumns"></mat-header-row>
+                <mat-row *matRowDef="let row; columns: displayedColumns;"></mat-row>
+              </mat-table>
+              <mat-paginator #paginatorLaboratorio [pageSizeOptions]="[10, 50, 100]" [length]="dataSourceLaboratorios.data.length" showFirstLastButtons></mat-paginator>
             </div>
 
           </mat-expansion-panel>
