--- a/src/app/components/tabela/tabela.component.html
+++ b/src/app/components/tabela/tabela.component.html
@@ -245,7 +245,7 @@
                   </ng-container>
 
                   <ng-container matColumnDef="selected">
-                    <mat-header-cell *matHeaderCellDef mat-sort-header style="text-align: center"> Selecione </mat-header-cell>
+                    <mat-header-cell *matHeaderCellDef mat-sort-header style="justify-content: center"> Selecione </mat-header-cell>
                     <mat-cell *matCellDef="let produto">
                       <section style="width: 100%; text-align: center">
                         <mat-checkbox [(ngModel)]="produto.selected"></mat-checkbox>
@@ -301,7 +301,7 @@
                   </ng-container>
 
                   <ng-container matColumnDef="selected">
-                    <mat-header-cell *matHeaderCellDef mat-sort-header style="text-align: center"> Selecione </mat-header-cell>
+                    <mat-header-cell *matHeaderCellDef mat-sort-header style="justify-content: center"> Selecione </mat-header-cell>
                     <mat-cell *matCellDef="let produto">
                       <section style="width: 100%; text-align: center">
                         <mat-checkbox [(ngModel)]="produto.selected"></mat-checkbox>
