--- a/src/app/components/entidade/entidade.component.html
+++ b/src/app/components/entidade/entidade.component.html
@@ -97,8 +97,8 @@
               </ng-container>
 
               <ng-container matColumnDef="selected">
-                <mat-header-cell *matHeaderCellDef mat-sort-header style="text-align: center"> Selecione </mat-header-cell>
-                <mat-cell *matCellDef="let profissao">
+                <mat-header-cell *matHeaderCellDef mat-sort-header style="justify-content: center"> Selecione </mat-header-cell>
+                <mat-cell *matCellDef="let profissao" style="justify-content: center">
                   <section style="width: 100%; text-align: center">
                     <mat-checkbox [(ngModel)]="profissao.selected"></mat-checkbox>
                   </section>
